# BLpp

./: CMakeLists.txt  README.md  main.cpp  profile.cpp  profile.h
data/: flat_nosed_flow_constant_density_coarse.csv  flat_nosed_pressure_distribution.csv  flat_nosed_pressure_distribution_coarse.csv  hemisphere_pressure_100.csv  hemisphere_pressure_20.csv  hemisphere_pressure_50.csv
notes/: boundary_layer_models.md
python/: bl_post_proc.py  compare_edges.py  post_compute.py  post_proc_functions.py  view_edge.py  view_outcomes.py  view_outputs.py  view_profile.py
python/geometry/: hemisphere_cylinder.py
src/: boundary_layer.cpp  boundary_layer.h  boundary_layer_factory.cpp  boundary_layer_factory.h  flat_plate.cpp  flat_plate.h  flat_plate_factory.cpp  flat_plate_factory.h  gas_model.h  profile.cpp  profile.h  profile_full.cpp  profile_full.h  profile_functions_cpg.cpp  profile_functions_cpg.h  profile_functions_default.cpp  profile_functions_default.h  profile_lsim.cpp  profile_lsim.h  profile_search.cpp  profile_search.h  profile_struct.h  search_struct.h
src/bench/: array_vs_vector_linalg.cpp  bench_develop_profile.cpp  bench_search_profile.cpp  parallel_compute_2d_profile.cpp  search_profile.cpp
src/boundary_layer/: bl_model_cpg.hpp  bl_model_default.hpp  bl_model_struct.h  bl_model_struct.hpp  boundary_data_struct.h  boundary_data_struct.hpp  boundary_layer.cpp  boundary_layer.h  boundary_layer.hpp  boundary_layer_factory.cpp  boundary_layer_factory.hpp  profile_functions_cpg.cpp  profile_functions_cpg.h  profile_functions_cpg.hpp  profile_functions_default.cpp  profile_functions_default.h  profile_functions_default.hpp  profile_struct.h  profile_struct.hpp  score_functions.cpp  score_functions.h  score_functions.hpp  search_struct.h  search_struct.hpp
src/cases/: case_functions.cpp  case_functions.h  case_functions.h.in  case_functions.hpp.in
src/data/: boundary_data_struct.h  flat_nosed_flow.csv  flat_nosed_flow_constant_density.csv  flat_nosed_pressure_distribution.csv
src/debug/: debug_develop_profile.cpp
src/exec/: compute_2d_profile.cpp  compute_flat_plate_local_sim.cpp  debug_develop_profile.cpp  develop_flat_plate.cpp  develop_flat_plate_implicit.cpp  develop_profile.cpp  search_flat_plate.cpp  search_profile.cpp  solve_from_pressure.cpp
src/linalg/: dense_direct_solver.cpp  dense_direct_solver.h  dense_direct_solver.hpp  dense_direct_solver_array.hpp  dense_linalg.cpp  dense_linalg.h  dense_linalg.hpp  dense_linalg_array.hpp  dense_matrix.cpp  dense_matrix.h  dense_matrix.hpp  generic_dense_direct_solver.hpp  generic_dense_linalg.hpp  generic_dense_matrix.hpp
src/physics/: atmosphere.h  atmosphere.hpp  case_functions.h  gas_model.h  gas_model.hpp  shock_relations.h  shock_relations.hpp  stagnation.h  stagnation.hpp
src/solvers/: edge_solvers.cpp  edge_solvers.h  edge_solvers.hpp  generic_newton_solver.hpp  newton_solver.h  newton_solver.hpp  newton_struct.hpp
src/utils/: file_io.cpp  file_io.h  file_io.hpp  generic_vector.hpp  indexing.hpp  message_queue.h  message_queue.hpp  parsing.h  parsing.hpp  timers.hpp  utils.cpp  utils.h  utils.hpp
tests/: CMakeLists.txt  atmosphere_test.cpp  dense_linear_solve_test.cpp  gas_model_test.cpp  generic_dense_linear_solve_test.cpp  generic_newton_solve_test.cpp  newton_solve_test.cpp  profile_functions_test.cpp  shock_test.cpp  stagnation_test.cpp  testing_utils.h  testing_utils.hpp  trivial_test.cpp
